src/test/ui/missing/missing-stability.stderr
error: This node does not have a stability attribute
  --> $DIR/missing-stability.rs:8:1
   |
LL | / pub fn unmarked() {
LL | |     //~^ ERROR This node does not have a stability attribute
LL | |     ()
LL | | }
   | |_^

error: This node does not have a stability attribute
  --> $DIR/missing-stability.rs:22:5
   |
LL |     pub fn unmarked() {}
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

